Add background, change tetraminoes

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
-        
+
+        implementation 'com.googlecode.json-simple:json-simple:1.1.1'
     }
 }
